@@ -1,3 +1,4 @@
+Sim Sharing: Added instance id to battery current messages.
 Sim Sharing: Added message rate limiting to battery current messages.
 Sim Sharing: send grab bag item message, see #3497
 Sim Sharing: send message when grab bag button pressed, see #3497
